chore: Ignore internal documentation files
Keep only public-facing docs in git:
- README.md (public)
- CHANGELOG.md (public, if exists)

Ignore internal dev docs:
- GITHUB_SETUP.md
- PYPI_SUCCESS.md
- RELEASE_SUMMARY.md
- COMPARISON_ANALYSIS.md
- IMPLEMENTATION_SUMMARY.md
- PUBLISHING.md

These files remain locally but won't be pushed to GitHub.

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,10 @@ dmypy.json
 # OS
 .DS_Store
 Thumbs.db
+
+# Documentation - ignore internal dev docs, keep public-facing ones
+*.md
+!README.md
+!CHANGELOG.md
+!CONTRIBUTING.md
+!CODE_OF_CONDUCT.md
